--- a/src/styles/hero/_hero.scss
+++ b/src/styles/hero/_hero.scss
@@ -3,7 +3,7 @@
 @include grid();
 
 .hero {
-    background-image: url("/assets/bg.jpg");
+    background-image: url("../images/bg.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 
